# nw_config_cicd

./: README.md  ansible-navigator.yaml  ansible.cfg  arista_test.yml  create_sg_to_permit_gha.py  pyproject.toml  ternary_test.yml
.github/workflows/: GA_arista.yaml  GA_commit_and_inspect.yaml  GA_junos_shutdown.yaml  test_arist.yaml  wf_directory_test.yaml
blog/kitamura/: containerlab.md
blog/uchida/: 01_Git.md  02_CICD.md  03_Assert.md
design/: flow.md
device/VMX02/: config
execution_environment/: execution-environment.yml
execution_environment/context/: Dockerfile
execution_environment/context/_build/: bindep.txt  requirements.txt  requirements.yml
presentation/: 20230727.md  20231130.md  aptechfest.md  k_kitamura.txt  k_kitamura_20231130  k_uchida.txt  marp_ap-techfest.md  presentation_manual.md
presentation/marp-themes/: apc_confidential.css
project/backup/: ceos01  ceos02  vmx01  vmx02  vmx03  vmx04
project/inventory/: AWS_inventory.yaml  arista_inventory.yml
project/inventory/develop/: inventory.yaml
project/inventory/production/: inventory.yaml
project/material/: operation.yaml
project/material/arista/: assume.yaml  get_show.json
project/material/bypass/: expect.yaml
project/material/bypass_back/: expect.yaml
project/material/shut_0_0_1/: expect.yaml
project/playbook/: arista_change_and_inspect.yaml  arista_compare_and_backup.yaml  arista_inspect.yaml  arista_inspect_test.yaml  arista_show.yaml  commit_and_inspect.yaml  compare_and_backup.yaml  connectivity_check.yaml  directory_test.yaml  junos_shutdown.yaml  test_show.yaml
(+10 files in other folders)
