[tool.poetry]
name = "ansible-jvlab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ansible_jvlab"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "<2.15.0"
ncclient = "^0.6.13"
ansible-builder = "^3.0.0"
ansible-navigator = "^3.3.1"
requests = "^2.31.0"
netaddr = "^0.8.0"
jmespath = "^1.0.1"
lxml = "^4.9.3"
jxmlease = "^1.0.3"
xmltodict = "^0.13.0"
yamllint = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
